    and YAP config files that are used for expanding calls to the Prolog
    built-in predicates phrase/2-3 with a Object::GrammarRuleBody in the
    first argument.

    Added a set of unit tests for the "securemp" example.

    Improved the "debug_hooks" example, showing how to use a parametric hook
    object in alternative to two simple hook objects.


2.40.0 - June 16, 2010

    Bundled version 1.0 of Verdi Neruda, a meta-interpreter collection that
    includes both top-down and bottom-up search strategies. Thanks to Victor
    Lagerkvist for his contribution.

    Added experimental on-line help support using the new "help" example. See
    the example "NOTES.txt" file for a list of current operating-system and
    back-end Prolog compiler limitations.

    Changed the representation of meta-argument which are goals in the
    meta_predicate/1 directives from "::" to "0". When compiling calls
    to Prolog module meta-predicates, the meta-argument indicator ":" is
    interpreted as "0", which will work for most cases. Due to the lack of
    standardization of the Prolog meta_predicate/1 directive, special care
    must taken when calling both Prolog proprietary built-in meta-predicates
    and Prolog module meta-predicates.

    Changed the implementation of the term and goal expansion mechanisms in
    order to only be performed automatically by the Logtalk compiler when
    compiling a source file. When dynamically creating entities at runtime or
    when asserting clauses, the term_expansion/2 and goal_expansion/2 built-in
    methods must be called explicitly.

    Corrected a bug when using the ::/2, ::/1, ^^/2, and :/1 Logtalk control
    constructs from bagof/3 and setof/3 calls with existentially quantified
    variables. This bug could result in missing alternative solutions when
    backtracking over the bagof/3 and setof/3 calls. Thanks to Victor
    Lagerkvist for his help in diagnosing the problem.
