@@ -44,6 +44,9 @@ RELEASE NOTES
     Improved the "debug_hooks" example, showing how to use a parametric hook
     object in alternative to two simple hook objects.
 
+    Improved the "examples/tester.sh" script in order to print the current
+    time and date, plus the Logtalk and back-end Prolog compiler versions.
+
 
 2.40.0 - June 16, 2010
 
